# app

./: docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: api.py  auth.py  config.py  db.py  main.py  models.py  printers.py  printing.py  realtime.py  schemas.py  security.py  seed.py
backend/scripts/: db_bootstrap.sql
frontend/admin/: app.js  index.html
frontend/bar/: app.js  index.html  styles.css
frontend/cameriere/: app.js  index.html  styles.css
frontend/cassa/: index.html
frontend/cassa/assets/css/: base.css  calendar.css  cards-buttons.css  header.css  layout.css  overlays-modals.css  pin.css  responsive.css  sidebar.css  styles.css  toast.css  tokens.css
frontend/cassa/assets/js/: app.js  attachments.js  calendar.js  clock.js  dom.js  modals.js  pin.js  reminders.js  router.js  state.js  storage.js  ui.js
